--- a/_posts/2017-03-08-welcome.md
+++ b/_posts/2017-03-08-welcome.md
@@ -13,4 +13,4 @@ I'm coming to data science from a solid 5-year career in teaching and
 researching pure mathematics, and with a strong concern for
 environmental, international, and social justice issues.  To find out
 more about my mathematical life and projects, including an academic
-CV, visit <www.forthelukeofmath.com>.
+CV, visit [forthelukeofmath.com](http://www.forthelukeofmath.com).
