--- a/_posts/2018-11-01-DESC.md
+++ b/_posts/2018-11-01-DESC.md
@@ -4,7 +4,7 @@ title: Downtown Emergency Service Center (DESC)
 subtitle: data science volunteer to help Seattle's homelessness crisis
 ---
 
-Since summer of 2017 I have been volunteering at [DESC](www.desc.org), an incredible local non-profit that runs 17 buildings throughout Seattle where they provide permanent supportive housing to the most vulnerable of Seattle's homeless population.  Their client database includes detailed information going back decades, including residency data as well as data from clinical programs (e.g. mental health, chemical dependency).  I lead a team of two data science volunteers.  Some of the projects we have worked on:
+Since summer of 2017 I have been volunteering at [DESC](https://www.desc.org), an incredible local non-profit that runs 17 buildings throughout Seattle where they provide permanent supportive housing to the most vulnerable of Seattle's homeless population.  Their client database includes detailed information going back decades, including residency data as well as data from clinical programs (e.g. mental health, chemical dependency).  I lead a team of two data science volunteers.  Some of the projects we have worked on:
 
 - built a deep learning model that incorporates caseworker notes via natural language processing (NLP), along with hand-crafted features, to predict clients at risk of costly incidents involving police, ambulance, or property damage. (gensim, keras)
 
