--- a/_posts/2018-12-01-Edifecs.md
+++ b/_posts/2018-12-01-Edifecs.md
@@ -1,20 +1,14 @@
 ---
 layout: post
 title: Edifecs, Inc
-subtitle: lead Data Scientist for healthcare tech company
+subtitle: lead Data Scientist for innovative healthcare tech company
 ---
 
-[Edifecs](www.edifecs.com) builds software for health insurance companies, large provider networks, and US Medicaid and Medicare organizations.  Their software is used by 26 of 52 state Medicaids, and 8 or the 9 Blue plans.  In the last few years, they've started a data science initiative, and I work as their lead Data Scientist.  We use health data -- medical claims, pharmacy claims, lab data, electronic health records, clinical text notes, etc -- and do really cool data science with it: opioid analytics, hospital readmission prediction, medication adherence, etc.  Some of my projects at Edifecs:
+[Edifecs](https://www.edifecs.com) builds software for health insurance companies, large provider networks, and US Medicaid and Medicare organizations.  Their software is used by 31 of 52 state Medicaids, and 25 of the 36 Blue plans.  In the last few years, they've started a data science initiative, and I work as their lead Data Scientist.  We use health data -- medical claims, pharmacy claims, lab data, electronic health records, clinical text notes, etc -- and do really cool data science with it: opioid analytics, hospital readmission prediction, medication adherence, etc.  Some of my projects at Edifecs:
 
 - published IEEE paper on Scalable Record Linkage, a novel Siamese deep learning network architecture for record matching.  With matching accuracies as good as the current state-of-the-art, my model can process 100x the data in 60% the time.  (Spark, keras)
 
-- built multiple deep learning models on a population of 400k members and their 40 million medical and pharmacy claims. (Spark, keras)
-
--- 30-day hospital readmission predictive model with AUC = 0.83, better than a Google/Stanford collaboration benchmark of 0.77.
-
--- Emergency Department admission prediction, with F1-score 0.65 and AUC 0.76.
-
--- other use cases: medication adherence; high-cost prediction; opioid abuse disorder prediction, claims rework
+- built multiple deep learning models on a population of 400k members and their 40 million medical and pharmacy claims: 30-day hospital readmission predictive model with AUC = 0.83, better than a Google/Stanford collaboration benchmark of 0.77; Emergency Department admission prediction, with F1-score 0.65 and AUC 0.76; other use cases: medication adherence, high-cost prediction, opioid abuse disorder prediction, claims rework. (Spark, keras)
 
 - built a medical intervention recommendation engine, which uses deep learning-based collaborative filtering to learn from case management data and claims history. (keras, python)
 
